# g6-investment-agent

./: .env.example  .gitignore  AAI-520 Final Team Project - Group 6.html  AAI_520_Final_Team_Project_Group_6.ipynb  README.md  agents.py  api_clients.py  cache_manager.py  data_models.py  pyproject.toml  research_agent.py  streamlit_example.py  workflows.py
images/: Evaluator-Optimizer - Quality Scoring.mmd  InvestmentResearchAgent - Full Research Cycle.mmd  Multi-Agent System Coordination.mmd  Prompt Chain Workflow AAPL Example.mmd  Prompt Chain Workflow.mmd  Routing Workflow - Overview.mmd  Routing Workflow - Sequence Diagram.mmd  Self-Reflection and Learning - Agent Memory Entry.mmd
tests/: __init__.py  test_all_agents.py  test_market_agent.py
