[project]
name = "myapp"
version = "0.1.0"
description = "Multi-Agent Financial Analysis System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.33",
    "langchain>=0.3.27",
    "numpy>=1.24.0",
    "openai>=1.3.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.2",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]
